CSS: Supplemented line break in status profile (fixes #176)

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -337,6 +337,7 @@ table {
     color: #000;
     width: 380px;
     height: auto !important;
+    overflow: hidden;
 }
 
 .button {
